Move <script> tag to <head>.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="index.js" charset="utf-8" defer></script>
   </head>
   <body>
 
@@ -248,5 +250,4 @@
 
   </body>
 
-  <script src="index.js" charset="utf-8"></script>
 </html>
